# tricksy

./: README.md  configuration_tricksy.py  generate.py  modeling_tricksy.py  pyproject.toml  util.py
tricksy/: configuration_tricksy.py  generate.py  modeling_tricksy.py
